add blog and release calendar endpoint
