# SneakerApi/resource/staticResource.js
@@ -1,0 +1,100 @@
+const blog = [{
+    "title": "Sneakercon",
+    "cover": "https://sneakernews.com/wp-content/uploads/2019/09/sneaker-con-toronto-2019-info-tickets.jpg",
+    "category": "event",
+    "description": "Als Alan Vinogradov, sein Bruder Barris und der eher unerwartete Partner, Yu-Ming Wu, die erste SneakerCon im Jahr 2009 auf die Beine stellten, ging es zun\u00e4chst einmal darum, Menschen zu finden, die von Sneakers genauso besessen sind, wie sie selbst. Sie wussten, dass irgendwo da drau\u00dfen eine Community an Schuh-Sammlern sein musste, die seltene Paare kaufen, verkaufen und tauschen wollen.",
+    "contentPictures": ["https://www.star-telegram.com/entertainment/arts-culture/gli0vs/picture158437694/alternates/FREE_1140/SneakerCon", "https://i.pinimg.com/originals/ae/e4/0c/aee40c94d255e3d33d00c722500a482d.jpg"],
+    "shareLink": "https://stockx.com/",
+    "contentVideo": "NLILkbfgoQ8"
+}, {
+    "title": "Yeezy 380 Alien Review",
+    "cover": "https://i.ytimg.com/vi/PI9qDtdNO6M/maxresdefault.jpg",
+    "category": "review",
+    "description": "Eine v\u00f6llig neue Silhouette hatten wir von Kanye West und adidas schon l\u00e4nger nicht. In den letzten Monaten wurden zwar ziemlich viele Yeezys released, aber haupts\u00e4chlich neue Colorways. Diesmal bekommen wir mit dem Yeezy Boost 380 eine etwas abgewandelte und noch modernere Form der 350er Silhouette. Sie ist eher socken\u00e4hnlich, die Sohle wird zur Ferse hin dicker und der Sneaker schlie\u00dft insgesamt h\u00f6her am Kn\u00f6chel ab. Die Sohle ist diesmal glatt und wir bekommen auf dem d\u00fcnnen Upper auch kleine ausgeschnittene Details. F\u00fcr den n\u00e4chsten Sommer einfach mega nice und das macht den neuen Yeezy zum Must-Cop!",
+    "contentPictures": ["https://cdn.thesolesupplier.co.uk/2019/10/Alien-1.jpg", "https://www.jordanupdate.com/wp-content/uploads/2019/11/adidas-Yeezy-Boost-380-Alien-for-sale.jpg"],
+    "shareLink": "https://stockx.com/",
+    "contentVideo": "eU8r2FLFO8Q"
+}, {
+    "title": "Die Geschichte der Air Jordans",
+    "cover": "https://www.spox.com/de/sport/ussport/nba/1909/Diashows/geschichte-der-air-jordans/jordans-sneaker-1.jpg",
+    "category": "geschichte",
+    "description": "Angeblich war der Air Jordan III der Lieblingsschuh von MJ, den er in zahlreichen Spielen trug. Es dauerte allerdings noch ein paar Jahre, bis Jordan die erste Championship seiner Karriere eint\u00fcten konnte. 1991 holte er mit den Bulls den ersten seiner sechs Titel - an seinen F\u00fc\u00dfen trug der GOAT dabei den Air Jordan VI",
+    "contentPictures": ["https://images.solecollector.com/complex/images/fl_lossy,q_auto/c_scale,w_690,dpr_2.0/v1/hrgmlcggxbqsxajigmzg/michael-jordan-air-jordan-1-strap-injury-celtics-1986", "https://usatsneakhype.files.wordpress.com/2015/04/air-jordan.jpg?w=1000&h=600&crop=1"],
+    "shareLink": "https://stockx.com/",
+    "contentVideo": "rEORJoHMu4M"
+}, {
+    "title": "Travis Scott AF1 Cactus Jack",
+    "cover": "https://www.deadstock.de/wp-content/uploads/2019/08/travisscott_1-e1565770387789.jpg",
+    "category": "news",
+    "description": "Der Sneaker hat viele interessante Elemente und es wurde mit vielen unterschiedlichen Materialien gearbeitet. Das Upper besteht aus verschiedenen Leder, Wildleder und Stoff Elementen, die im Patchwork-Style miteinander vern\u00e4ht sind und die Herkunft des Rappers, Texas, unterstreichen soll. Die Swooshs sind ebenfalls aus Stoff und in Beige auf der Au\u00dfenseite und in einem dezenten Camouflagemuster auf der Innenseite. An der Ferse findet man ein Lasche in demselben Beige wie der Swoosh auf der Au\u00dfenseite. Diese werden mit zwei goldenen Kn\u00f6pfen befestigt. Die Midsole des Schuhs ist in Wei\u00df und wird von einer feinen Naht in Mintgr\u00fcn durchzogen. Die Outsole besteht aus naturbelassenem Gummi.",
+    "contentPictures": ["https://sneakernews.com/wp-content/uploads/2019/11/travis-scott-nike-air-force-1-release-info.jpg", "https://www.deadstock.de/wp-content/uploads/2019/11/travis-scott-nike-air-force-1-ds-10.jpg"],
+    "shareLink": "https://stockx.com/",
+    "contentVideo": "tgoItWupWEE"
+}]
+
+const releaseCalendar = [{
+    "title": "Air Force 1 Low Travis Scott Cactus Jack",
+    "imageURL": "https://images.restocks.eu/products/CN2405-900/nike-air-force-1-low-travis-scott-cactus-jack-1-1000.png",
+    "retailPrice": "$160",
+    "priceSpan": "$420 - $561",
+    "releaseDate": "11/16/2019",
+    "imgArray": ["https://nssdata.s3.amazonaws.com/images/galleries/21523/17(1).jpg", "https://static.highsnobiety.com/thumbor/Qwdd3FFzOQLmxOOYvVufUUOj49Q=/fit-in/1200x720/smart/static.highsnobiety.com/wp-content/uploads/2019/10/12102045/travis-scott-nike-air-force-1-texas-release-date-price-feat.jpg"],
+    "brand": "Nike",
+    "description": "Sein Style und sein Sinn f\u00fcr \u00c4thetik zeichneten Travis Scott bereits aus, als er noch in Houston lebte. Der AF-1 Travis Scott ist eine Hommage an seine Community, die ihn dabei unterst\u00fctzte, die kreative Inspiration durch Astroworld in seine Kunst miteinzubeziehen.Der Schuh ist eine Art Patchwork aus verschiedenen Elementen, die er mit seiner Kindheit assoziiert \u2013 die Strapazierf\u00e4higkeit von Arbeitskleidung, Farben aus der Natur und die surrealen Vibes von Astroworld.Er teilt seine Erfahrungen mit den Kids in Houston, indem er sie dazu motiviert und inspiriert, ihren ganz eigenen Weg zu gehen.",
+    "position": "bottom"
+}, {
+    "title": "adidas Yeezy Boost 350 Turtledove",
+    "imageURL": "https://i.ya-webdesign.com/images/yeezy-png-background-1.png",
+    "retailPrice": "$200",
+    "priceSpan": "$1,318 - $1,676",
+    "releaseDate": "06/27/2015",
+    "imgArray": ["https://mlstaticquic-a.akamaihd.net/adidas-yeezy-boost-v1-turtle-dove-D_NQ_NP_743584-MLU27528937430_062018-F.jpg", "https://www.adidas-group.com/media/filer_public_thumbnails/filer_public/81/9b/819b0e89-ff10-49ae-9b8e-acf2187dd376/kanye_west__adidas_cmo_eric_liedtke.jpeg__1200x630_q85_autocrop_crop-smart_subject_location-1598%2C1055_subsampling-2_upscale.jpg"],
+    "brand": "Adidas",
+    "description": "Nach dem YEEZY Boost 750 folgte im gleichen Jahr der YEEZY Boost 350. Dieses Mal ein Low-Top Model mit nahtloser (Primeknit) Oberseite und einer wei\u00dfen Boost Sohle, daf\u00fcr ohne Middlestrap. Der erste Colorway war Turtle Dove und erfreute sich sofort regem Interesse.",
+    "position": "top"
+}, {
+    "title": "Jordan 1 Retro Chicago (2015)",
+    "imageURL": "https://cdn.shopify.com/s/files/1/0684/4315/products/flightskool-air-jordan-1-1994-retro-chicago.png?v=1424828554",
+    "retailPrice": "$160",
+    "priceSpan": "$872 - $1,260",
+    "releaseDate": "05/30/2015",
+    "imgArray": ["https://sneakernews.com/wp-content/uploads/2019/07/CQ4921-601.jpg?w=780", "https://www.43einhalb.com/blog/wp-content/uploads/2017/10/slack-imgs-2.jpg"],
+    "brand": "Nike",
+    "description": "Der Ursprung der ganzen Erfolgsgeschichte liegt bei einem zun\u00e4chst noch unbekannten College Rookie, der sich unter allen Umst\u00e4nden in der NBA beweisen wollte. Die Rede ist von keinem Geringeren als dem gro\u00dfen Michael Jordan selbst. MJ lieferte w\u00e4hrend seine College Zeit v\u00f6llig kranke Ergebnisse ab und beeindruckte unz\u00e4hlige Scouts der NBA. Doch auch abseits des Feldes erreichte Jordan das vermeintlich Unerreichbare. Noch bevor Michael \u00fcberhaupt von einem Team gedrafted worden ist, unterzeichnete er einen Vertrag mit Nike. Eine Entscheidung, die wohl keiner beim Label mit dem swoosh bereuen d\u00fcrfte. Interessanterweise wollten die anderen dominierenden Schuhmarken keine \u00dcbereinkunft mit MJ treffen. Ganz sch\u00f6n miese Entscheidung!",
+    "position": "top"
+}, {
+    "title": "adidas Yeezy Boost 350 V2 Zebra",
+    "imageURL": "https://assets.bigcartel.com/product_images/196770802/stadvm.png?auto=format&fit=max&w=1000",
+    "retailPrice": "$220",
+    "priceSpan": "$267 - $312",
+    "releaseDate": "02/25/2017",
+    "imgArray": ["https://0.kixify.com/sites/default/files/imagecache/product_full/product/2017/06/24/p_16140801_83762636_3449726.jpg", "https://3.bp.blogspot.com/-YuhyVtXqWWA/WX9MLnl-G9I/AAAAAAAAEkc/WF1xkRJgyEwoOqEZdGqrmOw4ZxQogbkKgCLcBGAs/s1600/Adidas-Yeezy-Boost-350-V2-Zebra-The-Dapifer.jpg"],
+    "brand": "Adidas",
+    "description": "Der Schuh wurde zum Megaerfolg und ein begehrtes Sammlerst\u00fcck. Der Verkaufspreis betrug zu diesem Zeitpunkt $350, der heutige Wiederverkaufspreis wird auf rund $2000 gesch\u00e4tzt. Um die Exklusivit\u00e4t des Sneaker zu betonen, limitierten adidas und Kanye die St\u00fcckzahl auf 9000 und verkauften ihn nur in New York. Innerhalb von 10 Minuten war der Schuh ausverkauft und der Yeezy-Hype begann seinen Siegeszug.",
+    "position": "bottom"
+}, {
+    "title": "Puma RS-X Toys Bonnie Blue (W)",
+    "imageURL": "https://static.sneakerjagers.com/products/660x660/78123.jpg",
+    "retailPrice": "$110",
+    "priceSpan": "$71 - $112",
+    "releaseDate": "12/01/2018",
+    "imgArray": ["https://cdn.shopify.com/s/files/1/0255/3220/3107/products/47A8FAE5-BC74-4D3A-9FD5-2F3E4FE6B5B8.jpg?v=1571722956", "https://www.sneakers-actus.fr/wp-content/uploads/2018/11/Puma-RS-X-Toys-Reinvention-Bonnie-Blue-Sweet-Lavender.jpg"],
+    "brand": "Puma",
+    "description": "Die 80er hatten bekannterma\u00dfen so einiges zu bieten. Wie zum Beispiel das PUMA Running System. Oder das coolste Spielzeug aller Zeiten. Der RS-X TOYS feiert beides und pr\u00e4sentiert sich in jeder seiner Versionen wie ein echtes Sammlerst\u00fcck, das viele von uns wahrscheinlich bei blo\u00dfer Betrachtung direkt in unsere Kindheit und zu unserem Lieblingsspielzeug zur\u00fcckversetzt. Farben, wie man sie nur noch aus den Videospielhallen der 80er kennt, treffen bei diesem grandiosen Style auf ein super atmungsaktives Obermaterial aus Mesh. F\u00fcge ein einzigartiges D\u00e4mpfungssystem und eine griffige Sohle hinzu \u2013 und fertig ist der perfekte Retro-Running-Sneaker.",
+    "position": "top"
+}, {
+    "title": "adidas Yeezy Boost 700 Wave Runner Solid Grey",
+    "imageURL": "https://www.yeezypop.com/wp-content/uploads/2019/07/b75571_1.png",
+    "retailPrice": "$300",
+    "priceSpan": "$365 - $398",
+    "releaseDate": "11/01/2017",
+    "imgArray": ["https://sneakernews.com/wp-content/uploads/2019/08/YEEZY-700-WAVERUNNER-STORE-LIST.jpg", "https://i.ytimg.com/vi/4lYwvw5YB18/maxresdefault.jpg"],
+    "brand": "Adidas",
+    "description": "Der \u00bbChunky Sneaker\u00ab kommt mit einem Upper aus grauen und schwarzen Wildleder-Overlays und Premium-Leder mit blauen und gr\u00fcnen Mesh-Eins\u00e4tzen sowie reflektierenden Details an der Ferse. Gelbe Laces und orangefarbene Akzente an der Mittelsohle runden den Look ab! Die durchgehende BOOST-Mittelsohle bietet Dir Komfort und Stabilit\u00e4t.",
+    "position": "bottom"
+}]
+
+module.exports ={
+    releaseCalendar,
+    blog
+}
